[package]
name = "stardust-xr-molecules"
version = "0.29.0"
edition = "2021"

authors = ["Nova King <technobaboo@proton.me>"]
description = "Widget library for Stardust XR, built on top of Fusion"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr-molecules/"
homepage = "https://stardustxr.org"

[dependencies]
color-rs = "0.8.0"
glam = { version = "0.24.0", features = ["mint"] }
lazy_static = "1.4.0"
mint = "0.5.9"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
stardust-xr-fusion = "0.43.0"
tokio = { version = "1.25.0", features = ["rt"] }
xkbcommon = { version = "0.6.0", default-features = false, features = [] }
tracing = "0.1.37"
map-range = "0.1.1"
lerp = "0.5.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
color-eyre = { version = "0.6.2", default-features = false }
manifest-dir-macros = "0.1.16"
