[package]
name = "stardust-xr-molecules"
version = "0.44.0"
edition = "2021"

authors = ["Nova King <technobaboo@proton.me>"]
description = "Widget library for Stardust XR, built on top of Fusion"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr-molecules/"
homepage = "https://stardustxr.org"

[dependencies]
color-rs = "0.8.0"
glam = { version = "0.25.0", features = ["mint"] }
lazy_static = "1.4.0"
mint = "0.5.9"
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt"] }
# xkbcommon = { version = "0.6.0", default-features = false, features = [] }
tracing = "0.1.40"
map-range = "0.1.2"
lerp = "0.5.0"

stardust-xr-fusion = { git = "https://github.com/StardustXR/core.git" }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
color-eyre = { version = "0.6.2", default-features = false }
manifest-dir-macros = "0.1.16"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
