[package]
name = "stardust-xr-molecules"
version = "0.45.0"
edition = "2024"

authors = ["Nova King <technobaboo@proton.me>"]
description = "Widget library for Stardust XR, built on top of Fusion"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr-molecules/"
homepage = "https://stardustxr.org"

[dependencies]
glam = { version = "0.30.0", features = ["mint"] }
lazy_static = "1.4.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt"] }
# xkbcommon = { version = "0.6.0", default-features = false, features = [] }
tracing = "0.1.40"
map-range = "0.1.2"
lerp = "0.5.0"
zbus = { version = "5.11.0", features = ["tokio"] }
futures-util = "0.3.31"
ashpd = "0.12.0"

# [dependencies.ashpd]
# git = "https://github.com/technobaboo/ashpd.git"
# branch = "feature/custom-session-connection"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
